# star-launcher-sdk

./: pyproject.toml
src/star_launcher_sdk/: __init__.py  config.py  launcher.py  launcher.pyi  types.py  utils.py
src/star_launcher_sdk/enums/: __init__.py  game.py  host.py  path.py  region.py  salt.py  social_media_channel.py  update_url.py
src/star_launcher_sdk/models/: __init__.py  aihelp_customer_complaint.py  banner_and_news.py  client_info.py  domain.py  file.py  game_info.py  headers.py  hello_world.py  logger.py  logger_config.py  manifest.py  manifest_url.py  manifest_url_params.py  media.py  news.py  news_column.py  news_list.py  news_row.py  operations_banner.py  response_body.py  social_media_resource.py  update_file_info.py  update_info.py
tests/: conftest.py  test_async_launcher.py  test_config.py  test_launcher.py  test_model.py  test_type.py
tests/cassettes/test_async_launcher/: test_banner_and_news[asyncio].yaml  test_client_info[asyncio].yaml  test_domain[asyncio].yaml  test_game_info[asyncio].yaml  test_hello_world[asyncio].yaml  test_logger[asyncio].yaml  test_logger_config[asyncio].yaml  test_manifest[asyncio].yaml  test_manifest_url[asyncio].yaml  test_update_info[asyncio].yaml
tests/cassettes/test_config/: test_banner_and_news[HBR-CN].yaml  test_banner_and_news[HBR-JP].yaml  test_banner_and_news[HBR-KR].yaml  test_banner_and_news[MajSoul-CN].yaml  test_client_info[HBR-CN].yaml  test_client_info[HBR-JP].yaml  test_client_info[HBR-KR].yaml  test_client_info[MajSoul-CN].yaml  test_domain[HBR-CN].yaml  test_domain[HBR-JP].yaml  test_domain[HBR-KR].yaml  test_domain[MajSoul-CN].yaml  test_game_info[HBR-CN].yaml  test_game_info[HBR-JP].yaml  test_game_info[HBR-KR].yaml  test_game_info[MajSoul-CN].yaml  test_hello_world[HBR-CN].yaml  test_hello_world[HBR-JP].yaml  test_hello_world[HBR-KR].yaml  test_hello_world[MajSoul-CN].yaml  test_logger[HBR-CN].yaml  test_logger[HBR-JP].yaml  test_logger[HBR-KR].yaml  test_logger[MajSoul-CN].yaml  (+4 more)
tests/test_model/: test_banner_and_news.json  test_client_info.json  test_domain.json  test_game_info.json  test_hello_world.json  test_logger.json  test_logger_config.json  test_manifest.json  test_manifest_url.json  test_update_info.yaml
(+96 files in other folders)
