[project]
name = "star-launcher-sdk"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "annotated-types",
  "httpx",
  "pydantic",
  "pydantic-extra-types[semver]",
  "pydantic-yaml",
]

[dependency-groups]
dev = ["ty", { include-group = "lint" }, { include-group = "test" }]
lint = ["ruff"]
test = [
  "pytest",
  "pytest-cov",
  "pytest-datadir",
  "pytest-recording",
  "pytest-xdist",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D1", "D203", "D212"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["ANN001", "ANN201", "PLC0415", "S101"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"pydantic.BaseModel".msg = "Use star_launcher_sdk.base.Base instead."
"typing.Annotated".msg = "Use from star_launcher_sdk.types instead."

[tool.ruff.lint.isort]
force-single-line = true
