[project]
name = "star-launcher-sdk"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = [
  "annotated-types",
  "httpx",
  "pydantic",
  "pydantic-extra-types[semver]",
  "pydantic-yaml",
]

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "type" },
]
lint = ["ruff"]
test = [
  "pytest",
  "pytest-cov",
  "pytest-datadir",
  "pytest-recording",
  "pytest-xdist",
  "tox",
]
type = ["ty"]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D1", "D203", "D212"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["ANN001", "ANN201", "PLC0415", "S101"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"pydantic.BaseModel".msg = "Use star_launcher_sdk.models.base.Base instead."
"typing.Annotated".msg = "Use from star_launcher_sdk.types instead."

[tool.ruff.lint.isort]
force-single-line = true

[tool.tox]
requires = ["tox", "tox-uv"]
env_list = ["3.14", "3.13", "3.12"]

[tool.tox.env_run_base]
dependency_groups = ["test"]
commands = [["pytest", "--all"]]
